fixed invisible modal

--- a/Simplified School Portal/Content/bootstrap.css
+++ b/Simplified School Portal/Content/bootstrap.css
@@ -2391,7 +2391,8 @@ input[type="button"].btn-block {
           transition: opacity 0.15s linear;
 }
 
-.fade.in {
+/* Was in*/
+.fade.show {
   opacity: 1;
 }
 
@@ -5649,7 +5650,8 @@ body.modal-open,
           transition: transform 0.3s ease-out;
 }
 
-.modal.in .modal-dialog {
+/* Was in */
+.modal.show .modal-dialog {
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
@@ -5690,7 +5692,8 @@ body.modal-open,
   filter: alpha(opacity=0);
 }
 
-.modal-backdrop.in {
+/* Was in */
+.modal-backdrop.show {
   opacity: 0.5 !important;
   filter: alpha(opacity=50);
 }
